# HGD

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  objects.inv  pyinstaller.sh  pyproject.toml
.github/workflows/: black.yml  main.yml
HGD/: __init__.py  boundary.py  cycles.py  initial.py  main.py  mask.py  operators.py  params.py  plotter.py  stress.py
HGD/motion/: bindings_py.cpp  core.cpp  core.h  d2q4.cpp  d2q4_SA_array.py  d2q4_array.py  d2q4_array_v2.py  d2q4_array_v3.py  d2q4_slow.py  helpers.cpp  helpers.h  move_particles_tiled.cpp  stress.cpp  stress.h
MOTION_MODELS_README/: index.html
assets/: input_template.csv
docs/: MOTION_MODELS_README.md  README_COMPREHENSIVE.md  method_comparison_and_benchmarks.tex  method_comparison_summary.md  motion_models_analysis.tex  motion_models_summary.md  reference.md
json/: collapse.json5  collapse_bi.json5  collapse_inertia.json5  defaults.json5  dry_filling.json5  footing.json5  gui.json5  hopper.json5  hopper_cycle.json5  hopper_emptying.json5  hopper_emptying_f10_bi.json5  hopper_emptying_mu0p1_poly.json5  hopper_emptying_mu1.json5  hopper_emptying_mu1_poly.json5  inclined-plane-bidisperse.json5  inertia.json5  temperature.json5  test_slope.json5  test_stress.json5
motion_models_summary/: index.html
papers/HGD/: generate_paper.sh
papers/HGD/json/: collapse_angles.json5  collapse_bi.json5  collapse_fill.json5  collapse_stress.json5  fall.json5  silo_stress.json5
papers/HGD/post_process/: collapse_angles.py  collapse_bi.py  collapse_fill.py  collapse_poly.py  collapse_stress.py  silo_alpha_single.py
papers/HGD/review/: collapse_aspect.json5  fall.json5  fall.py  layers.json5  layers.py
papers/Heterarchical_Granular_Dynamics/json/: analytic.json5  collapse_bi.json5
papers/Heterarchical_Granular_Dynamics/other/: analytic_solution.py
papers/Heterarchical_Granular_Dynamics/post_process/: collapse_stress.py
papers/Kinematic_SLM/: generate_paper.sh  paper.mplstyle
papers/Kinematic_SLM/json/: analytic.json5  collapse_angles.json5  collapse_aspect.json5  collapse_aspect_ratio.json5  collapse_bi.json5  collapse_bi_conc.json5  collapse_fill.json5  collapse_poly.json5  collapse_stress.json5  silo_alpha.json5  slope_stability.json5
papers/Kinematic_SLM/other/: analytic_solution.py  discretisation_error.py
papers/Kinematic_SLM/post_process/: collapse_angles.py  collapse_bi.py  collapse_bi_conc.py  collapse_fill.py  collapse_poly.py  collapse_stress.py  silo_alpha.py  silo_alpha_single.py
papers/percolation/: paper.mplstyle
papers/percolation/json/: densification.json5  vibration.json5
papers/percolation/post_process/: densification.py
papers/silos/json/: elutriation_test.json5  inclined-plane-bidisperse.json5
reference/: index.html
test/: slope_test.py  test_helpers.py  test_operators.py  test_robustness.py
void_migration/: boundary.py  cycles.py  gui.py  initial.py  main.py  operators.py  params.py  plotter.py  stress.py
void_migration/motion/: d2q4_SA_array.py  d2q4_array.py  d2q4_array_v2.py  d2q4_slow.py
