[project]
name = "HGD"
version = "1.1"
requires-python = ">=3.9"
authors = [
  {name = "Benjy Marks", email = "benjy.marks@sydney.edu.au"},
  {name = "Shivakumar Athani", email = "shivakumar.athani@sydney.edu.au"},
  {name = "Jiahuan Li", email = "jiahuan.li@sydney.edu.au"}
]
description = "A heterarchical granular dynamics solver for the motion, segregation, mixing and crushing of granular media"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["granular", "void", "migration", "heterarchical", "stochastic"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
    "json5",
    "black",
    "flake8",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "markdown-include",
    "mkdocs-include-markdown-plugin",
    "pre-commit",
]

[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools", "wheel", "eigen"]  # Add Eigen
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = [
    "-DEigen3_DIR=${EIGEN3_ROOT}"  # Ensure Eigen is found
]

[tool.black]
line-length = 110
target-version = ['py311']

[tool.setuptools]
packages = ["HGD"]
